chore: setup local PostgreSQL data structure and mock data
Setup Docker PSQL database to use init_db.sql to seed structure and data. Noticed that various entities and fields are missing that will need to be added later, but it is okay for now to get started.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,16 @@ version: "3.9"
 services:
   db:
     image: postgres
+    ports:
+      - target: 5432
+        published: 5432
     volumes:
       - type: volume
         source: data
         target: /var/lib/postgresql/data
+      - type: bind
+        source: ./init_db.sql
+        target: /docker-entrypoint-initdb.d/init_db.sql
     environment:
       POSTGRES_PASSWORD: postgres
 
